--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,53 @@ main{
 .a-footer4{
     height: 300px ; 
 }
+.a-tnr{
+    font-family: 'Times New Roman', Times, serif ;
+}
+
+::-webkit-input-placeholder {
+    font-size: 15px;
+    font-weight: bold ;
+    color: #333 !important ;
+    opacity: 0.5 !important ;
+ }
+  
+ :-moz-placeholder { /* Firefox 18- */
+       font-size: 15px;
+       font-weight: bold ;
+       color: #333 !important ;
+    opacity: 0.5 !important ;
+ }
+ 
+ ::-moz-placeholder {  /* Firefox 19+ */
+       font-size: 15px;
+       font-weight: bold ;
+       color: #333 !important ;
+    opacity: 0.5 !important ;
+ }
+ 
+ /* Overriding styles */
+ 
+ ::-webkit-input-placeholder {
+    font-size: 15px!important;
+    font-weight: bold ;
+    color: #333 !important ;
+    opacity: 0.5 !important ;
+ }
+ 
+ :-moz-placeholder { /* Firefox 18- */
+       font-size: 15px!important;
+       font-weight: bold ;
+       color: #333 !important ;
+    opacity: 0.5 !important ;
+ }
+ ::-moz-placeholder {  /* Firefox 19+ */
+       font-size: 15px!important;
+       font-weight: bold ;
+       color: #333 !important ;
+    opacity: 0.5 !important ;
+ }
+
 @media screen and (min-width: 480px) {
     .a-form-col{
         height: 50px ;
