--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,15 @@ main{
        color: #333 !important ;
     opacity: 0.5 !important ;
  }
+ @media screen and (max-width: 576px){
+    footer{
+        position: fixed ;
+        width: 90% ;
+        bottom: 0px ;
+        left: 0px ;
+        margin-left: 22px ;
+    }
+ }
 
 @media screen and (min-width: 480px) {
     .a-form-col{
