--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,23 @@ body{
     border: 1px Dashed red ;
     background-color: #E8E8E8 ;
 }
+.a-scrollToTop{
+    animation-name: stp;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    -o-animation-direction: alternate;
+}
+@keyframes stp{
+    from{
+        opacity: 0;
+        transform: scale(0,0);
+    }
+    to{
+        opacity: 1;
+        transform: scale(1,1);
+    }
+}
 .a-tbdr{
    border: 1px Dashed red !important ;
 }
@@ -45,6 +62,19 @@ header{
 .a-m11{
     min-height: 120px ;
     border-color: 1px solid red ;
+}
+.a-raj{
+    bottom: 36px !important ;
+}
+.a-inputA{
+    background-color: #EEEEEE ;
+}
+.a-inputB :focus{
+    background-color: transparent ;
+}
+.a-inputfocus :focus{
+    border-color: white ; 
+   
 }
 .a-orange{
     background-color: #FF7D18 ;
@@ -148,6 +178,23 @@ main{
        font-weight: bold ;
        color: #333 !important ;
     opacity: 0.5 !important ;
+ }
+ .a-input-img{
+    float :right !important;
+ }
+    /* custom.css */
+ .a-inputfocuse:focus {
+    border-color: transparent !important;
+    box-shadow: none !important;
+    outline: none !important;
+ }
+ .a-search-form{
+    position: fixed !important;
+    top: 15px ;
+    left: 200px ;
+    z-index: 10000 ;
+    background-color: #fff ;
+    transition: all linear 5s !important ;
  }
  
  .a-animation{
