--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,16 @@ header{
     width: 6px !important ;
     height: 6px !important ;
 }
+.a-b2b{
+    /*
+    stransform-origin: x-axis y-axis
+    */ 
+    transform-origin: left center;
+    background-color: #0F7DD8 !important;
+    transform: scale(.8 , .8);
+    transition: all linear .3s;
+    left:-48px !important;    
+}
 .a-m11{
     min-height: 120px ;
     border-color: 1px solid red ;
@@ -147,7 +157,24 @@ main{
 .a-tnr{
     font-family: 'Times New Roman', Times, serif ;
 }
-
+.a-blue{
+    color: #0078DB !important;
+}
+.a-custom-smalles{
+    font-size: 15px !important;
+}
+.a-m55 img:hover{
+    box-shadow: 0px 0px 0px 5px rgba(0, 0, 0, 0.03);
+}
+.a-m55 a:hover{
+    background-color: transparent;
+}
+.a-m-Popular-Brands{
+    
+}
+.a-pop-slider{
+    height: 330px ;
+}
 ::-webkit-input-placeholder {
     font-size: 15px;
     font-weight: bold ;
@@ -228,6 +255,16 @@ main{
     transform: scale3d(1,1,1) ;
     transition: all linear 0.2s ;
 }
+.a-xyz:hover .a-b2b{
+    left: 0px !important ;
+}
+.a-xyz:hover .a-b2b{
+    color: #0F7DD8;
+    background-color: #fff;
+}
+.a-xyz:hover i{
+    color: #085799 !important;
+}
 .a-xyz:hover > span{
     transform: scale3d(1.1,1.1,1) ;
 }
@@ -245,6 +282,18 @@ main{
         transform: translateY(-42px);
     }
  }
+ @media screen and (min-width: 577px){
+    main{
+        padding-left: 45px ;
+        padding-right: 45px;
+    }
+ }
+ @media screen and (max-width: 576px){
+    main{
+        padding-left: 20px ;
+        padding-right: 20px;
+    }
+}
  @media screen and (max-width: 576px){
     footer{
         position: fixed ;
